Add pagination into config file

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ url: "https://wojtek2kdev.pl" # the base hostname & protocol for your site
 github_username: wojtek2kdev 
 # Build settings
 markdown: kramdown
+paginate: 10
+paginate_path: "/page/:num"
 categories_names:
   "node-js": "Node JS"
   "sieci": "Sieci komputerowe"
@@ -25,3 +27,5 @@ categories_names:
   "rozne": "Rozne"
   "projekty": "Projekty"
   "poradniki": "Poradniki"
+plugins:
+  - jekyll-paginate
