--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ description:
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://wojtek2kdev.pl" # the base hostname & protocol for your site
 github_username: wojtek2kdev 
+disqus:
+  shortname: wojtek2kdev-blog
 # Build settings
 markdown: kramdown
 paginate: 3
