--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ categories_names:
   "rozne": "Rozne"
   "projekty": "Projekty"
   "poradniki": "Poradniki"
+  "osobiste": "Osobiste"
 plugins: 
   - jekyll-feed
   - jekyll-paginate
